tests/NormalTests/paczka1/fuzzy1/61951733.err
Error in line 3: A462 A462 96,6
Error in line 5: 2vUHeqGoo S52S 6S,9
Error in line 2: R4yxK A502 23,3
Error in line 10: R4yxK S521 66,5
Error in line 21: R4yxK A462 29,$
Error in line 25: 2vUHeqGoo S584 68,5
Error in line 7: leon4XpgsB A462 91,3
